--- a/params_lightgbm.yaml
+++ b/params_lightgbm.yaml
@@ -1,23 +1,30 @@
 common_params:
   boosting: gbdt
   data_sample_strategy: bagging
-  bagging_fraction: 0.75
+  bagging_fraction: 1.0
   bagging_freq: 1
   bagging_by_query: true
   num_iterations: 1000
-  learning_rate: 0.06
+  learning_rate: 0.1
   num_leaves: 127
-  max_depth: 10
+  max_depth: -1
   min_data_in_leaf: 10
-  feature_fraction: 0.75
+  feature_fraction: 1.0
   early_stopping_round: 100
   use_missing: true
   num_threads: 6
+  lambda_l1: 1.0
+  lambda_l2: 1.0
 
 params_bin:
   objective: binary
   metric: binary_logloss
-  is_unbalance: false
+  scale_pos_weight: 1.0
+
+params_multi:
+  objective: multiclassova
+  num_class: 6
+  metric: multi_logloss
   scale_pos_weight: 1.0
 
 params_rank:
@@ -25,7 +32,3 @@ params_rank:
   metric: ndcg
   lambdarank_truncation_level: 8
   eval_at: [1,2,3,4,5]
-
-params_reg:
-  objective: regression
-  metric: rmse
